--- a/cms/templates/base.html
+++ b/cms/templates/base.html
@@ -72,7 +72,7 @@ from openedx.core.djangolib.js_utils import (
       <%block name="page_alert"></%block>
       </div>
 
-      <div id="content" tabindex="-1">
+      <div id="content">
       <%block name="content"></%block>
       </div>
 
