--- a/lms/templates/dashboard.html
+++ b/lms/templates/dashboard.html
@@ -18,7 +18,6 @@ from openedx.core.djangolib.js_utils import dump_js_escaped_json, js_escaped_str
 
 <%block name="pagetitle">${_("Dashboard")}</%block>
 <%block name="bodyclass">view-dashboard is-authenticated</%block>
-<%block name="nav_skip">#my-courses</%block>
 
 <%block name="header_extras">
 % for template_name in ["donation"]:
@@ -74,179 +73,181 @@ from openedx.core.djangolib.js_utils import dump_js_escaped_json, js_escaped_str
     %endif
 </div>
 
-<section class="container dashboard" id="dashboard-main">
-  <section class="my-courses" id="my-courses" role="main" tabindex="-1">
-    <header class="wrapper-header-courses">
-      <h2 class="header-courses">${_("My Courses")}</h2>
-    </header>
+<main id="main" aria-label="content" tabindex="-1">
+    <section class="container dashboard" id="dashboard-main">
+      <section class="my-courses" id="my-courses">
+        <header class="wrapper-header-courses">
+          <h2 class="header-courses">${_("My Courses")}</h2>
+        </header>
 
 
-    % if len(course_enrollments) > 0:
-      <ul class="listing-courses">
-      <% share_settings = getattr(settings, 'SOCIAL_SHARING_SETTINGS', {}) %>
-      % for dashboard_index, enrollment in enumerate(course_enrollments):
-        <% show_courseware_link = (enrollment.course_id in show_courseware_links_for) %>
-        <% cert_status = cert_statuses.get(enrollment.course_id) %>
-        <% can_unenroll = (not cert_status) or cert_status.get('can_unenroll') %>
-        <% credit_status = credit_statuses.get(enrollment.course_id) %>
-        <% show_email_settings = (enrollment.course_id in show_email_settings_for) %>
-        <% course_mode_info = all_course_modes.get(enrollment.course_id) %>
-        <% show_refund_option = (enrollment.course_id in show_refund_option_for) %>
-        <% is_paid_course = (enrollment.course_id in enrolled_courses_either_paid) %>
-        <% is_course_blocked = (enrollment.course_id in block_courses) %>
-        <% course_verification_status = verification_status_by_course.get(enrollment.course_id, {}) %>
-        <% course_requirements = courses_requirements_not_met.get(enrollment.course_id) %>
-        <% course_program_info = course_programs.get(unicode(enrollment.course_id)) %>
-        <%include file = 'dashboard/_dashboard_course_listing.html' args="course_overview=enrollment.course_overview, enrollment=enrollment, show_courseware_link=show_courseware_link, cert_status=cert_status, can_unenroll=can_unenroll, credit_status=credit_status, show_email_settings=show_email_settings, course_mode_info=course_mode_info, show_refund_option=show_refund_option, is_paid_course=is_paid_course, is_course_blocked=is_course_blocked, verification_status=course_verification_status, course_requirements=course_requirements, dashboard_index=dashboard_index, share_settings=share_settings, user=user, course_program_info=course_program_info" />
-      % endfor
-
-      </ul>
-    % else:
-      <section class="empty-dashboard-message">
-        <p>${_("Looks like you haven't enrolled in any courses yet.")}</p>
-
-        % if settings.FEATURES.get('COURSES_ARE_BROWSABLE'):
-          <a href="${marketing_link('COURSES')}">
-            ${_("Find courses now!")}
-          </a>
-        %endif
-      </section>
-    % endif
-
-    % if staff_access and len(errored_courses) > 0:
-      <div id="course-errors">
-        <h2>${_("Course-loading errors")}</h2>
-
-      % for course_dir, errors in errored_courses.items():
-         <h3>${course_dir}</h3>
-             <ul>
-           % for (msg, err) in errors:
-               <li>${msg}
-                 <ul><li><pre>${err}</pre></li></ul>
-               </li>
-           % endfor
-             </ul>
-      % endfor
-      </div>
-    % endif
-  </section>
-
-  % if settings.FEATURES.get('ENABLE_DASHBOARD_SEARCH'):
-    <div id="dashboard-search-bar" class="search-bar dashboard-search-bar" role="search" aria-label="Dashboard">
-      <form>
-        <label for="dashboard-search-input">${_('Search Your Courses')}</label>
-        <div class="search-field-wrapper">
-          <input id="dashboard-search-input" type="text" class="search-field"/>
-          <button type="submit" class="search-button" aria-label="${_('Search')}">
-            <i class="icon fa fa-search" aria-hidden="true"></i>
-          </button>
-          <button type="button" class="cancel-button" aria-label="${_('Clear search')}">
-            <i class="icon fa fa-remove" aria-hidden="true"></i>
-          </button>
-        </div>
-      </form>
-    </div>
-  % endif
-
-  % if settings.FEATURES.get('ENABLE_DASHBOARD_SEARCH'):
-    <section id="dashboard-search-results" class="search-results dashboard-search-results"></section>
-  % endif
-
-  <section class="profile-sidebar" id="profile-sidebar" role="region" aria-label="Account Status Info">
-    <header class="profile">
-      <h2 class="account-status-title sr">${_("Account Status Info")}: </h2>
-    </header>
-    <section class="user-info">
-      <ul>
-
-        % if len(order_history_list):
-        <li class="order-history">
-          <span class="title">${_("Order History")}</span>
-          % for order_history_item in order_history_list:
-            <span><a href="${order_history_item['receipt_url']}" target="_blank" class="edit-name">${order_history_item['order_date']}</a></span>
+        % if len(course_enrollments) > 0:
+          <ul class="listing-courses">
+          <% share_settings = getattr(settings, 'SOCIAL_SHARING_SETTINGS', {}) %>
+          % for dashboard_index, enrollment in enumerate(course_enrollments):
+            <% show_courseware_link = (enrollment.course_id in show_courseware_links_for) %>
+            <% cert_status = cert_statuses.get(enrollment.course_id) %>
+            <% can_unenroll = (not cert_status) or cert_status.get('can_unenroll') %>
+            <% credit_status = credit_statuses.get(enrollment.course_id) %>
+            <% show_email_settings = (enrollment.course_id in show_email_settings_for) %>
+            <% course_mode_info = all_course_modes.get(enrollment.course_id) %>
+            <% show_refund_option = (enrollment.course_id in show_refund_option_for) %>
+            <% is_paid_course = (enrollment.course_id in enrolled_courses_either_paid) %>
+            <% is_course_blocked = (enrollment.course_id in block_courses) %>
+            <% course_verification_status = verification_status_by_course.get(enrollment.course_id, {}) %>
+            <% course_requirements = courses_requirements_not_met.get(enrollment.course_id) %>
+            <% course_program_info = course_programs.get(unicode(enrollment.course_id)) %>
+            <%include file = 'dashboard/_dashboard_course_listing.html' args="course_overview=enrollment.course_overview, enrollment=enrollment, show_courseware_link=show_courseware_link, cert_status=cert_status, can_unenroll=can_unenroll, credit_status=credit_status, show_email_settings=show_email_settings, course_mode_info=course_mode_info, show_refund_option=show_refund_option, is_paid_course=is_paid_course, is_course_blocked=is_course_blocked, verification_status=course_verification_status, course_requirements=course_requirements, dashboard_index=dashboard_index, share_settings=share_settings, user=user, course_program_info=course_program_info" />
           % endfor
-        </li>
+
+          </ul>
+        % else:
+          <section class="empty-dashboard-message">
+            <p>${_("Looks like you haven't enrolled in any courses yet.")}</p>
+
+            % if settings.FEATURES.get('COURSES_ARE_BROWSABLE'):
+              <a href="${marketing_link('COURSES')}">
+                ${_("Find courses now!")}
+              </a>
+            %endif
+          </section>
         % endif
 
-        <%include file="${static.get_template_path('dashboard/_dashboard_status_verification.html')}" />
+        % if staff_access and len(errored_courses) > 0:
+          <div id="course-errors">
+            <h2>${_("Course-loading errors")}</h2>
 
-      </ul>
+          % for course_dir, errors in errored_courses.items():
+             <h3>${course_dir}</h3>
+                 <ul>
+               % for (msg, err) in errors:
+                   <li>${msg}
+                     <ul><li><pre>${err}</pre></li></ul>
+                   </li>
+               % endfor
+                 </ul>
+          % endfor
+          </div>
+        % endif
+      </section>
+
+      % if settings.FEATURES.get('ENABLE_DASHBOARD_SEARCH'):
+        <div id="dashboard-search-bar" class="search-bar dashboard-search-bar" role="search" aria-label="Dashboard">
+          <form>
+            <label for="dashboard-search-input">${_('Search Your Courses')}</label>
+            <div class="search-field-wrapper">
+              <input id="dashboard-search-input" type="text" class="search-field"/>
+              <button type="submit" class="search-button" aria-label="${_('Search')}">
+                <i class="icon fa fa-search" aria-hidden="true"></i>
+              </button>
+              <button type="button" class="cancel-button" aria-label="${_('Clear search')}">
+                <i class="icon fa fa-remove" aria-hidden="true"></i>
+              </button>
+            </div>
+          </form>
+        </div>
+      % endif
+
+      % if settings.FEATURES.get('ENABLE_DASHBOARD_SEARCH'):
+        <section id="dashboard-search-results" class="search-results dashboard-search-results"></section>
+      % endif
+
+      <section class="profile-sidebar" id="profile-sidebar" role="region" aria-label="Account Status Info">
+        <header class="profile">
+          <h2 class="account-status-title sr">${_("Account Status Info")}: </h2>
+        </header>
+        <section class="user-info">
+          <ul>
+
+            % if len(order_history_list):
+            <li class="order-history">
+              <span class="title">${_("Order History")}</span>
+              % for order_history_item in order_history_list:
+                <span><a href="${order_history_item['receipt_url']}" target="_blank" class="edit-name">${order_history_item['order_date']}</a></span>
+              % endfor
+            </li>
+            % endif
+
+            <%include file="${static.get_template_path('dashboard/_dashboard_status_verification.html')}" />
+
+          </ul>
+        </section>
+      </section>
+      % if xseries_credentials:
+        <div class="wrapper-xseries-certificates">
+          <p class="title">${_("XSeries Program Certificates")}</p>
+          <p class="copy">${_("You have received a certificate for the following XSeries programs:")}</p>
+          <ul>
+          % for xseries_credential in xseries_credentials:
+            <li>
+              <a class="copy" href="${xseries_credential['credential_url']}">${xseries_credential['display_name']}</a>
+            </li>
+          % endfor
+          </ul>
+        </div>
+      % endif
     </section>
-  </section>
-  % if xseries_credentials:
-    <div class="wrapper-xseries-certificates">
-      <p class="title">${_("XSeries Program Certificates")}</p>
-      <p class="copy">${_("You have received a certificate for the following XSeries programs:")}</p>
-      <ul>
-      % for xseries_credential in xseries_credentials:
-        <li>
-          <a class="copy" href="${xseries_credential['credential_url']}">${xseries_credential['display_name']}</a>
-        </li>
-      % endfor
-      </ul>
-    </div>
-  % endif
-</section>
 
-<section id="email-settings-modal" class="modal" aria-hidden="true">
-  <div class="inner-wrapper" role="dialog" aria-labelledby="email-settings-title">
-    <button class="close-modal">
-      <i class="icon fa fa-remove"></i>
-      <span class="sr">
-        ## Translators: this is a control to allow users to exit out of this modal interface (a menu or piece of UI that takes the full focus of the screen)
-        ${_("Close")}
-      </span>
-    </button>
+    <section id="email-settings-modal" class="modal" aria-hidden="true">
+      <div class="inner-wrapper" role="dialog" aria-labelledby="email-settings-title">
+        <button class="close-modal">
+          <i class="icon fa fa-remove"></i>
+          <span class="sr">
+            ## Translators: this is a control to allow users to exit out of this modal interface (a menu or piece of UI that takes the full focus of the screen)
+            ${_("Close")}
+          </span>
+        </button>
 
-    <header>
-      <h2 id="email-settings-title">
-        ${_("Email Settings for {course_number}").format(course_number='<span id="email_settings_course_number"></span>')}
-        <span class="sr">,
-          ## Translators: this text gives status on if the modal interface (a menu or piece of UI that takes the full focus of the screen) is open or not
-          ${_("window open")}
-        </span>
-      </h2>
-      <hr/>
-    </header>
+        <header>
+          <h2 id="email-settings-title">
+            ${_("Email Settings for {course_number}").format(course_number='<span id="email_settings_course_number"></span>')}
+            <span class="sr">,
+              ## Translators: this text gives status on if the modal interface (a menu or piece of UI that takes the full focus of the screen) is open or not
+              ${_("window open")}
+            </span>
+          </h2>
+          <hr/>
+        </header>
 
-    <form id="email_settings_form" method="post">
-      <input name="course_id" id="email_settings_course_id" type="hidden" />
-      <label>${_("Receive course emails")} <input type="checkbox" id="receive_emails" name="receive_emails" /></label>
-      <div class="submit">
-        <input type="submit" id="submit" value="${_("Save Settings")}" />
+        <form id="email_settings_form" method="post">
+          <input name="course_id" id="email_settings_course_id" type="hidden" />
+          <label>${_("Receive course emails")} <input type="checkbox" id="receive_emails" name="receive_emails" /></label>
+          <div class="submit">
+            <input type="submit" id="submit" value="${_("Save Settings")}" />
+          </div>
+        </form>
       </div>
-    </form>
-  </div>
-</section>
+    </section>
 
-<section id="unenroll-modal" class="modal unenroll-modal" aria-hidden="true">
-  <div class="inner-wrapper" role="dialog" aria-labelledby="unenrollment-modal-title">
-    <button class="close-modal">
-      <i class="icon fa fa-remove"></i>
-      <span class="sr">
-        ## Translators: this is a control to allow users to exit out of this modal interface (a menu or piece of UI that takes the full focus of the screen)
-        ${_("Close")}
-      </span>
-    </button>
+    <section id="unenroll-modal" class="modal unenroll-modal" aria-hidden="true">
+      <div class="inner-wrapper" role="dialog" aria-labelledby="unenrollment-modal-title">
+        <button class="close-modal">
+          <i class="icon fa fa-remove"></i>
+          <span class="sr">
+            ## Translators: this is a control to allow users to exit out of this modal interface (a menu or piece of UI that takes the full focus of the screen)
+            ${_("Close")}
+          </span>
+        </button>
 
-    <header>
-      <h2 id="unenrollment-modal-title">
-        <span id='track-info'></span>
-        <span id='refund-info'></span>
-        <span class="sr">,
-          ## Translators: this text gives status on if the modal interface (a menu or piece of UI that takes the full focus of the screen) is open or not
-          ${_("window open")}
-        </span>
-      </h2>
-      <hr/>
-    </header>
-    <div id="unenroll_error" class="modal-form-error"></div>
-    <form id="unenroll_form" method="post" data-remote="true" action="${reverse('change_enrollment')}">
-      <input name="course_id" id="unenroll_course_id" type="hidden" />
-      <input name="enrollment_action" type="hidden" value="unenroll" />
-      <div class="submit">
-        <input name="submit" type="submit" value="${_("Unenroll")}" />
+        <header>
+          <h2 id="unenrollment-modal-title">
+            <span id='track-info'></span>
+            <span id='refund-info'></span>
+            <span class="sr">,
+              ## Translators: this text gives status on if the modal interface (a menu or piece of UI that takes the full focus of the screen) is open or not
+              ${_("window open")}
+            </span>
+          </h2>
+          <hr/>
+        </header>
+        <div id="unenroll_error" class="modal-form-error"></div>
+        <form id="unenroll_form" method="post" data-remote="true" action="${reverse('change_enrollment')}">
+          <input name="course_id" id="unenroll_course_id" type="hidden" />
+          <input name="enrollment_action" type="hidden" value="unenroll" />
+          <div class="submit">
+            <input name="submit" type="submit" value="${_("Unenroll")}" />
+          </div>
+        </form>
       </div>
-    </form>
-  </div>
-</section>
+    </section>
+</main>
