--- a/cms/templates/settings.html
+++ b/cms/templates/settings.html
@@ -292,11 +292,40 @@ CMS.URL.UPLOAD_ASSET = '${upload_asset_url}';
                 <span class="tip">${_("Information for prospective students")}</span>
               </header>
               <ol class="list-input">
+
+                % if about_page_editable:
+                <li class="field" id="field-course-title">
+                  <label for="course-title">${_("Course Title")}</label>
+                  <input type="text" id="course-title">
+                </li>
+                % endif
+
+                % if about_page_editable:
+                <li class="field" id="field-course-subtitle">
+                  <label for="course-subtitle">${_("Course Subtitle")}</label>
+                  <input type="text" id="course-subtitle">
+                </li>
+                % endif
+
+                % if about_page_editable:
+                <li class="field" id="field-course-duration">
+                  <label for="course-duration">${_("Course Duration")}</label>
+                  <input type="text" id="course-duration">
+                </li>
+                % endif
+
                 % if short_description_editable:
                 <li class="field text" id="field-course-short-description">
                   <label for="course-overview">${_("Course Short Description")}</label>
                   <textarea class="text" id="course-short-description"></textarea>
                   <span class="tip tip-stacked">${_("Appears on the course catalog page when students roll over the course name. Limit to ~150 characters")}</span>
+                </li>
+                % endif
+
+                % if about_page_editable:
+                <li class="field text" id="field-course-description">
+                  <label for="course-description">${_("Course Description")}</label>
+                  <textarea class="text" id="course-description"></textarea>
                 </li>
                 % endif
 
