--- a/lms/templates/learner_dashboard/programs.html
+++ b/lms/templates/learner_dashboard/programs.html
@@ -20,6 +20,16 @@ ProgramListFactory({
 <%block name="pagetitle">${_("Programs")}</%block>
 
 <div class="program-list-wrapper">
+    % if not len(programs):
+        <div class="dashboard">
+        <section class="empty-dashboard-message">
+            <p>${_("It looks like you aren't yet enrolled in any XSeries Programs!")}</p>
+              <a class="find-xseries-programs" href=${xseries_url}><i class="action-xseries-icon" aria-hidden="true"></i>
+                ${_("View XSeries Programs")}
+              </a>
+          </section>
+        </div>
+    % endif
     <div class="program-cards-container"></div>
     <div class="sidebar"></div>
 </div>
