--- a/lms/templates/learner_dashboard/programs.html
+++ b/lms/templates/learner_dashboard/programs.html
@@ -24,7 +24,7 @@ ProgramListFactory({
         <div class="dashboard">
         <section class="empty-dashboard-message">
             <p>${_("It looks like you aren't yet enrolled in any XSeries Programs!")}</p>
-              <a class="find-xseries-programs" href=${xseries_url}><i class="action-xseries-icon" aria-hidden="true"></i>
+              <a class="find-xseries-programs" href=""><i class="action-xseries-icon" aria-hidden="true"></i>
                 ${_("View XSeries Programs")}
               </a>
           </section>
